--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
       - dev
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -16,4 +16,5 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.17.1
+      - run: npm install
       - run: npm test
