--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/ericminio/yop-scheduling#readme",
   "devDependencies": {
+    "@cucumber/cucumber": "^7.3.0",
     "chai": "^4.3.4",
     "mocha": "^9.0.1",
-    "@cucumber/cucumber": "^7.3.0"
+    "selenium-webdriver": "^4.0.0-beta.4"
   }
 }
