--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.17.1
+      - name: setup firefox
+        uses: browser-actions/setup-firefox@latest
+      - run: firefox --version
       - run: npm install
       - run: npm test
