--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "description": "[Vision](about/1.vision.feature)",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cucumber-js -r about/steps --exit about",
-    "start": "node app/start.js"
+    "test": "./node_modules/.bin/cucumber-js -r ../about/steps --exit ../about",
+    "start": "node start.js"
   },
   "repository": {
     "type": "git",
