--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,5 @@ jobs:
       - name: setup firefox
         uses: browser-actions/setup-firefox@latest
       - run: firefox --version
-      - run: cd app
-      - run: npm install
+      - run: cd app && npm install
       - run: MOZ_HEADLESS=1 npm test
