--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/cucumber-js -r ../about/steps --exit ../about",
-    "start": "node start.js"
+    "start": "node start.js",
+    "tests:internal": "mocha *.spec.js"
   },
   "repository": {
     "type": "git",
