--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,10 @@
   "description": "[Vision](about/1.vision.feature)",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cucumber-js -r ../about/steps --exit ../about",
-    "start": "node start.js",
-    "tests:internal": "mocha *.spec.js"
+    "tests:external": "./node_modules/.bin/cucumber-js -r ../about/steps --exit ../about",
+    "tests:internal": "mocha './{,!(node_modules)/**}/*.spec.js'",
+    "test": "npm run tests:internal && npm run tests:external",
+    "start": "node start.js"
   },
   "repository": {
     "type": "git",
