--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "^7.3.0",
     "chai": "^4.3.4",
+    "jsdom": "^16.6.0",
     "mocha": "^9.0.1",
     "selenium-webdriver": "^4.0.0-beta.4"
   }
