--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tests:external": "./node_modules/.bin/cucumber-js --publish-quiet -r ../about/steps --exit ../about --tags 'not @backlog'",
-    "tests:internal": "mocha './{,!(node_modules)/**}/*.spec.js' --exit",
+    "tests:internal": "mocha './{,!(node_modules)/**}/*.spec.js' --exit --timeout 0",
     "test": "npm run tests:internal && npm run tests:external",
     "start": "node start.js"
   },
