--- a/app/package.json
+++ b/app/package.json
@@ -25,5 +25,8 @@
     "jsdom": "^16.6.0",
     "mocha": "^9.0.1",
     "selenium-webdriver": "^4.0.0-beta.4"
+  },
+  "dependencies": {
+    "yop-postgresql": "^1.3.0"
   }
 }
