--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  ping:
+  test:
     name: database health check
 
     runs-on: ubuntu-latest
@@ -17,7 +17,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: scheduling
+          POSTGRES_USER: dev
+          POSTGRES_PASSWORD: dev
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -38,36 +40,12 @@ jobs:
       - name: run
         env:
           PGHOST: postgres
-        run: |
-          pwd
-          cd app
-          npm run ping:database
-
-  test:
-    needs: ping
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: set node version
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.17.1
-      - name: setup firefox
-        uses: browser-actions/setup-firefox@latest
-      - name: run
-        env:
-          MOZ_HEADLESS: 1
-          PGHOST: localhost
           PGDATABASE: scheduling
           PGUSER: dev
           PGPASSWORD: dev
-          DATABASE_URL: postgres://dev:dev@0.0.0.0/scheduling
         run: |
-          docker-compose up -d database
           cd app
-          npm install
-          env
-          docker ps
+          npm run ping:database
           npm test
+
+  
