--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
           POSTGRES_DB: scheduling
           POSTGRES_USER: dev
           POSTGRES_PASSWORD: dev
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
