--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,9 @@ jobs:
           PGDATABASE: scheduling
           PGUSER: dev
           PGPASSWORD: dev
+          DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
         run: |
           cd app
           npm run ping:database
-          npm test
 
   
