--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
     name: database health check
 
     runs-on: ubuntu-latest
-    container: node:14.17.1
+    container: 
+      image: node:14.17.1
 
     services:
       postgres:
@@ -46,7 +47,7 @@ jobs:
           PGDATABASE: scheduling
           PGUSER: dev
           PGPASSWORD: dev
-          DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
+          DATABASE_URL: postgres://dev:dev@postgres:5432/scheduling
         run: |
           cd app
           npm run ping:database
