--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,11 @@ jobs:
           npm install
       - name: run
         env:
+          PGHOST: postgres
+          PGPORT: 5432
+          PGDATABASE: scheduling
+          PGUSER: dev
+          PGPASSWORD: dev
           DATABASE_URL: postgres://dev:dev@postgres:5432/scheduling
         run: |
           cd app
