--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 jobs:
 
   test:
-    name: database health check
+    name: run all tests
 
     runs-on: ubuntu-latest
     container: 
@@ -32,8 +32,6 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
-      - name: setup firefox
-        uses: browser-actions/setup-firefox@latest
       - name: info
         run: |
           node --version
