--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,8 @@ jobs:
 
   test:
     name: run internal tests
-
     runs-on: ubuntu-latest
-    container: 
-      image: node:14.17.1
-
+    
     services:
       postgres:
         image: postgres
@@ -30,6 +27,8 @@ jobs:
           --health-retries 5
 
     steps:
+      - name: setup firefox
+        uses: browser-actions/setup-firefox@latest
       - name: checkout code
         uses: actions/checkout@v2
       - name: info
@@ -43,9 +42,9 @@ jobs:
       - name: run
         env:
           MOZ_HEADLESS: 1
-          DATABASE_URL: postgres://dev:dev@postgres:5432/scheduling
+          DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
         run: |
           cd app
-          npm run tests:internal
+          npm run tests:external
 
   
