--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,6 @@ services:
             - 8015:8015
         environment: 
             - PORT=8015
+            - DATABASE_URL=postgres://dev:dev@database:5432/scheduling
 
         
