npm install --only=prod

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14.17.1-alpine3.13
 
 COPY . /home/node/app/
 RUN cd /home/node/app && \
-    npm install
+    npm install --only=prod
 
 WORKDIR /home/node/app
 CMD [ "npm", "start" ]
