ResourcesReader returns Resource instances

--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
     "tests:external": "./node_modules/.bin/cucumber-js --publish-quiet -r ../about/steps --exit ../about",
     "tests:external-with-only": "./node_modules/.bin/cucumber-js --publish-quiet -r ../about/steps --exit ../about --tags '@only'",
     "tests:internal": "mocha './{,!(node_modules)/**}/*.spec.js' --exit --timeout 0",
+    "tests:web-components": "mocha './web/components/**/*.spec.js' --exit --timeout 0",
+    "tests:web-data": "mocha './web/data/**/*.spec.js' --exit --timeout 0",
     "test": "npm run tests:internal && npm run tests:external",
     "start": "node start.js",
     "ping:database": "mocha ./storage/ready.spec.js --exit"
