--- a/.github/workflows/yop-agenda.yml
+++ b/.github/workflows/yop-agenda.yml
@@ -18,7 +18,7 @@ jobs:
         heroku_app_name: "yop-agenda"
         heroku_email: "eric.mignot+scheduling@gmail.com"
         usedocker: true
-        appdir: app
+        appdir: .
         docker_heroku_process_type: web
         stack: container
         healthcheck: "https://yop-agenda.herokuapp.com/ping"
