--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,24 @@ jobs:
         run: |
           cd app
           npm install
-      - name: run
+      - name: ping database
+        env:
+          DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
+        run: |
+          cd app
+          npm run ping:database
+      - name: internal tests
+        env:
+          DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
+        run: |
+          cd app
+          npm run tests:internal
+      - name: external tests
         env:
           MOZ_HEADLESS: 1
           DATABASE_URL: postgres://dev:dev@localhost:5432/scheduling
         run: |
           cd app
-          npm run ping:database
-          npm test
+          npm run tests:external
 
   
