--- a/.github/workflows/troubleshoot.yml
+++ b/.github/workflows/troubleshoot.yml
@@ -8,8 +8,11 @@ on:
 jobs:
 
   test:
-    name: run tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        firefox: [ '91.0.2' ]
+    name: run tests on firefox ${{ matrix.firefox }}
     
     services:
       postgres:
@@ -28,7 +31,7 @@ jobs:
 
     steps:
       - name: setup firefox
-        uses: browser-actions/setup-firefox@91.0.2
+        uses: browser-actions/setup-firefox@latest
       - name: checkout code
         uses: actions/checkout@v2
       - name: info
