--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
     "chai": "^4.3.4",
     "jsdom": "^16.6.0",
     "mocha": "^9.0.1",
-    "selenium-webdriver": "^4.0.0-beta.4"
+    "selenium-webdriver": "^4.0.0"
   },
   "dependencies": {
     "pg": "^8.6.0"
