--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,10 @@ jobs:
         uses: browser-actions/setup-firefox@latest
       - name: checkout code
         uses: actions/checkout@v2
+      - name: install node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
       - name: info
         run: |
           node --version
